# Web-project-FastApi

./: .gitignore  docker-compose.yml  items_views.py  main.py  pyproject.toml
alembic/versions/: 2024_11_05_1212-9d31bbca66fc_create_products_table.py  2024_11_05_1234-b102e296be01_create_users_table.py  2024_11_05_1255-22a7de1bfa25_create_post_table.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  db_helper.py  post.py  user.py
users/: crud.py  views.py
